--- a/great-idea-website/index.html
+++ b/great-idea-website/index.html
@@ -34,7 +34,7 @@
 </div>
   <img class= "header" src="img/header-img.png" alt="Image of a code snippet.">
 
-<div>
+<div class ="middle">
   <h2>Features</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 
@@ -44,7 +44,7 @@
 
   <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
 </div>
-<div>
+<div class= "secMid">
   <h2>Services</h2>
   <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
 </div>
